--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "sqlite3": "^5.0.8",
     "web-vitals": "^2.1.4"
   },
   "main": "public/electron.js",
@@ -23,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
-    "electron": "wait-on tcp:3000 && electron ."
+    "electron": "wait-on tcp:3000 && electron .",
+    "postinstall": "install-app-deps"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +48,9 @@
   "devDependencies": {
     "concurrently": "^7.2.1",
     "electron": "^19.0.4",
+    "electron-builder": "^23.1.0",
     "electron-is-dev": "^2.0.0",
+    "knex": "^2.1.0",
     "wait-on": "^6.0.1"
   }
 }
