--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "hebrew-bear",
+  "description": "Vocabulary for Hebrew words",
   "version": "0.1.0",
+  "author": "Mykhailo Kryvytsky <mihail.krivic@gmail.com>",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -18,9 +20,22 @@
     "web-vitals": "^2.1.4"
   },
   "main": "public/electron.js",
+  "build": {
+    "appId": "com.hebrewbear.app",
+    "win": {
+      "icon" : "public/favicon.ico",
+      "target": ["portable"]
+    },
+    "linux": {
+      "category": "education",
+      "icon" : "public/logo512.png",
+      "target": ["AppImage", "deb"]
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "electron-builder": "electron-builder --linux",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
@@ -48,7 +63,7 @@
   "devDependencies": {
     "concurrently": "^7.2.1",
     "electron": "^19.0.4",
-    "electron-builder": "^23.1.0",
+    "electron-builder": "^23.3.3",
     "electron-is-dev": "^2.0.0",
     "knex": "^2.1.0",
     "wait-on": "^6.0.1"
